Fixed offscreen indicator count.

--- a/examples/repsolDashboard/repsol.css
+++ b/examples/repsolDashboard/repsol.css
@@ -28,6 +28,7 @@
 .chart {
     position: relative !important;
     min-height: 150px !important;
+    margin-left: 10px;
 }
 
 /* ========================================================================== */
@@ -112,8 +113,6 @@
     margin-left: 8px;
     margin-right: 8px;
     border-color: #A5B8BD;
-    -webkit-border-radius:5%;
-    border-radius:5%;
     background-color: #BCCED2;
     margin-top: 3px;
     margin-bottom: 8px;
@@ -121,6 +120,8 @@
     padding-left: 10px;
     padding-top: 15px;
     font-size: small;
+    -moz-border-radius: 10px;
+    border-radius: 10px;
 }
 
 /* Details overview header */
